# axme-docs

./: README.md  pyproject.toml
.github/workflows/: ci.yml
axme_docs/: __init__.py
docs/: ADR-002-service-boundaries.md  ADR-003-trust-consent-model.md  B2B_FEATURES.md  MVP_SCOPE.md  axme-is-not-rpc.md  enterprise-routing-transport-operations.md  enterprise-runtime-model-and-placement.md  enterprise-scoped-credentials-migration-note.md  examples-cloud-vs-protocol.md  external-integrator-dry-run.md  integration-quickstart.md  mcp-axme-continuation-pattern.md  migration-and-deprecation-policy.md  migration-message-centric-to-intent-lifecycle.md  public-api-auth.md  public-api-families-d1-intents-inbox-approvals.md  public-api-families-d2-webhooks-capabilities.md  public-api-families-d3-users.md  public-api-families-d4-invites-media.md  public-api-families-d5-schemas.md  public-api-families-d6-enterprise-governance.md  security-overview.md  supported-limits-and-error-model.md
docs/connectors/: intent-normalization.md  mcp-android-bridge-setup.md  mcp-chatgpt-setup.md  mcp-claude-setup.md  mcp-gemini-setup.md  mcp-siri-bridge-setup.md
docs/diagrams/: DIAGRAM_USAGE_MATRIX.md  README.md  REPO_DISTRIBUTION_PLAN.md  VISUALIZATION_BACKLOG.md
docs/diagrams/api/: 01-api-method-family-map.dot  01-api-method-family-map.mmd  02-error-model-retriability.dot  02-error-model-retriability.mmd  index.md  (+4 more)
docs/openapi/: chatgpt-adapter.v1.json  gateway.track-f-sprint1.v1.json  gateway.v1.json  gemini-adapter.v1.json
scripts/: validate_docs.py
tests/: test_validate_docs.py
(+75 files in other folders)
